--- a/TextCount.html
+++ b/TextCount.html
@@ -12,7 +12,9 @@
     <textarea placeholder="カウントしたい文字をペーストしてください" id="text" onkeyup="showCount(this);" cols="30" rows="10"></textarea>
     <script>
         const showCount = (str) => {
-            document.getElementById('num').innerHTML = str.value.replace(/ /g, "").length + '文字';
+            const num = document.getElementById('num');
+            const strNum = str.value;
+            num.innerHTML = strNum.replace(/\s+/g, '').length + '文字';
         };
     </script>
 </body>
