--- a/TextCount.html
+++ b/TextCount.html
@@ -3,19 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="TxtCnt-title.ico">
     <title>字数カウント</title>
+    <link rel="stylesheet" href="textCounter.css">
 </head>
 
 <body>
-    <h1>字数のカウント</h1> 
-    <p id="num">0文字</p>
-    <textarea placeholder="カウントしたい文字をペーストしてください" id="text" onkeyup="showCount(this);" cols="30" rows="10"></textarea>
+    
+    <div id="div1">
+        <h1>字数カウント</h1> 
+    </div>
+
+    <div id="div2">
+        <button id="resetBtn">リセット</button>
+    </div>
+
+    <div id="div3">
+        <textarea placeholder="カウントしたい文をペーストしてください" id="text" onkeyup="showCount(this);" cols="30" rows="10"></textarea>
+        <p id="num">0 文字</p>
+    </div>
+   
     <script>
+        const num = document.getElementById('num');
+        const text = document.getElementById('text');
+        const resetBtn = document.getElementById('resetBtn')
+
         const showCount = (str) => {
-            const num = document.getElementById('num');
             const strNum = str.value;
-            num.innerHTML = strNum.replace(/\s+/g, '').length + '文字';
+            num.innerHTML = strNum.replace(/\s+/g, '').length +' '+ '文字'; //句読点を除く場合は.replace(/\s+|。|、/g, '')
         };
+
+        const resetText = () => {
+            num.innerHTML = '0 文字';
+            text.value = '';
+        };
+
+        resetBtn.addEventListener('click', () => {
+            resetText();
+        });
     </script>
 </body>
 
